@@ -17,19 +17,18 @@
  */
 
 App.DagController = Em.ObjectController.extend(App.Helpers.DisplayHelper, {
-	controllerName: 'DagController',
+  controllerName: 'DagController',
+  pageTitle: 'Dag',
+  loading: true,
 
-	pageTitle: 'Dag',
-
-	loading: true,
-
-	updateLoading: function() {
+  updateLoading: function() {
     var that = this;
     var loaders = [];
+    var applicationId = this.get('applicationId');
     if (this.get('status') === 'RUNNING') {
       // update the progress info if available. this need not block the UI
       var aminfoLoader = that.store.find('dagProgress', that.get('id'), {
-        appId: that.get('applicationId'),
+        appId: applicationId,
         dagIdx: that.get('idx')
       }).then(function(dagProgressInfo) {
         that.set('progress', dagProgressInfo.get('progress'));
@@ -38,19 +37,32 @@ App.DagController = Em.ObjectController.extend(App.Helpers.DisplayHelper, {
       });
       loaders.push(aminfoLoader);
     }
+    var appDetailLoader = this.store.find('appDetail', applicationId)
+      .then(function(app){
+        that.set('appDetail', app);
+      });
+    var tezAppLoader = this.store.find('tezApp', 'tez_' + applicationId)
+      .then(function(app){
+        that.set('tezApp', app);
+      });
+
     Em.RSVP.allSettled(loaders).then(function(){
       that.set('loading', false);
     });
   }.observes('content'),
 
-	childDisplayViews: [
-		Ember.Object.create({title: 'Details', linkTo: 'dag.index'}),
-		Ember.Object.create({title: 'View', linkTo: 'dag.view'}),
-		Ember.Object.create({title: 'Vertices', linkTo: 'dag.vertices'}),
-		Ember.Object.create({title: 'Tasks', linkTo: 'dag.tasks'}),
-		Ember.Object.create({title: 'Task Attempts', linkTo: 'dag.taskAttempts'}),
-		Ember.Object.create({title: 'Counters', linkTo: 'dag.counters'}),
-		Ember.Object.create({title: 'Swimlane', linkTo: 'dag.swimlane'})
-	],
+  enableAppIdLink: function() {
+    return !!(this.get('tezApp') && this.get('appDetail'));
+  }.property('applicationId', 'appDetail', 'tezApp'),
+
+  childDisplayViews: [
+    Ember.Object.create({title: 'Details', linkTo: 'dag.index'}),
+    Ember.Object.create({title: 'View', linkTo: 'dag.view'}),
+    Ember.Object.create({title: 'Vertices', linkTo: 'dag.vertices'}),
+    Ember.Object.create({title: 'Tasks', linkTo: 'dag.tasks'}),
+    Ember.Object.create({title: 'Task Attempts', linkTo: 'dag.taskAttempts'}),
+    Ember.Object.create({title: 'Counters', linkTo: 'dag.counters'}),
+    Ember.Object.create({title: 'Swimlane', linkTo: 'dag.swimlane'})
+  ],
 
 });
